# nextgenhealth

./: .buildinfo  .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  commit_msg.txt  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  src.html  src.user_management.domain.entities.html  src.user_management.domain.enums.html  src.user_management.domain.exceptions.html  src.user_management.domain.html  src.user_management.domain.specifications.html  src.user_management.domain.specifications.user.html  src.user_management.domain.validation.html  src.user_management.domain.validation.user.html  src.user_management.html
_modules/: index.html
_sources/: modules.rst.txt  src.rst.txt  src.user_management.domain.entities.rst.txt  src.user_management.domain.enums.rst.txt  src.user_management.domain.exceptions.rst.txt  src.user_management.domain.specifications.rst.txt  src.user_management.domain.validation.rst.txt  src.user_management.domain.validation.user.rst.txt
docs/: 00_sdlc_overview.md  01_project_scope.md  02_requirements_gathering.md  03_feasibility_analysis.md  05_system_architecture.md  06_initial_documentation.md  CONTEXT.md
src/: modules.html  user_management.domain.entities.html  user_management.domain.enums.html  user_management.domain.exceptions.html  user_management.domain.exceptions.user.html  user_management.domain.html  user_management.domain.specifications.html  user_management.domain.specifications.user.html  user_management.domain.validation.html  (+2 more)
(+348 files in other folders)
