[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nextgenhealth"
version = "0.1.0"
description = "Healthcare identity management system with Clean Architecture and DDD"
authors = [{name = "Fernando Antunes de Magalhães"}]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]